* Player.py : Expanded long_report for players * Tournament.py : finished the tiebreaker functions * Tournament.py : wrote tiebreaker sort * test.py : Now iterates over several rounds. * Player_names.txt holds player names for the testing functionality.

--- a/TODO
+++ b/TODO
@@ -3,3 +3,5 @@
 * further cleanup of output from both player and tournament modules
     - Table listings should be by last name and duplicated
 * maybe encapsulte tables in their own class?
+* the helper functions for player sorting are backwards but otherwise correct.
+
