* Tournaments now start with a 'bye' player. * Alterations to generate_pairings * match reporting in tournament class now calls table implementation * list_tables can now list all or only active tables

--- a/TODO
+++ b/TODO
@@ -3,5 +3,6 @@
 * further cleanup of output from both player and tournament modules
     - Table listings should be by last name and duplicated
 * maybe encapsulte tables in their own class?
+* maybe store tables in the tournament class as an array of arrays?
 * the helper functions for player sorting are backwards but otherwise correct.
 
