--- a/TODO
+++ b/TODO
@@ -1,8 +1,5 @@
 * implement byes
-* make tables index from zero
 * further cleanup of output from both player and tournament modules
-    - Table listings should be by last name and duplicated
-* maybe encapsulte tables in their own class?
 * maybe store tables in the tournament class as an array of arrays?
 * the helper functions for player sorting are backwards but otherwise correct.
-
+* Finish proper state-setting during the event.
