* Minor pre-emptive linting. * Fixed a tiny bug in test.py

--- a/TODO
+++ b/TODO
@@ -1,1 +1,3 @@
 * further cleanup of output from both player and tournament modules
+* improve error handling
+* get print statements out of key modules
