--- a/TODO
+++ b/TODO
@@ -3,3 +3,5 @@
 * get print statements out of key modules
 * create top-n / single elimination bracket scheduling
 * create round-robin tournament scheduling
+? Does table_sort belong in Tournament.py?  Leaning toward yes.
+
