--- a/TODO
+++ b/TODO
@@ -3,5 +3,7 @@
 * get print statements out of key modules
 * create top-n / single elimination bracket scheduling
 * create round-robin tournament scheduling
+* create functions for standings listing
+* improve the console parsing
+* player bulletproofing
 ? Does table_sort belong in Tournament.py?  Leaning toward yes.
-
