* Expanded the TODO list a bit.

--- a/TODO
+++ b/TODO
@@ -1,7 +1,15 @@
 * further cleanup of output from both player and tournament modules
 * improve error handling
 * create top-n / single elimination bracket scheduling
+    - DCI top8 : 1-8 4-5 3-6 2-7
 * create round-robin tournament scheduling
 * create functions for standings listing
 * improve the console parsing
 * user bulletproofing
+* players need a 'drop' state (probably others too)
+* draft pod tracking
+* optional "don't play the same guy twice" scheduling
+* time between rounds for dropping players
+* redo pairings option
+* printouts
+    - tables, pairings, and most importantly result slips
