--- a/TODO
+++ b/TODO
@@ -2,8 +2,8 @@
 * improve error handling
 * create top-n / single elimination bracket scheduling
     - DCI top8 : 1-8 4-5 3-6 2-7
+    - top4?    : 1-4 3-2
 * create round-robin tournament scheduling
-* create functions for standings listing
 * improve the console parsing
 * user bulletproofing
 * players need a 'drop' state (probably others too)
